@@ -6,8 +6,10 @@ import cafe.adriel.voyager.core.model.ScreenModel
 import cafe.adriel.voyager.core.model.screenModelScope
 import data.tutorial.MongoDB
 import domain.tutorial.RequestState
+import domain.tutorial.TaskAction
 import domain.tutorial.ToDoTask
 import kotlinx.coroutines.Dispatchers
+import kotlinx.coroutines.IO
 //import kotlinx.coroutines.delay
 import kotlinx.coroutines.flow.collectLatest
 import kotlinx.coroutines.launch
@@ -37,6 +39,42 @@ class HomeViewModel(private val mongoDB: MongoDB): ScreenModel {
             mongoDB.readCompletedTasks().collectLatest {
                 _completedTasks.value = it
             }
+        }
+    }
+
+    fun setAction(action: TaskAction){
+        when (action) {
+            is TaskAction.SetCompleted -> {
+                setCompleted(action.task, action.completed)
+            }
+
+            is TaskAction.Delete -> {
+                deleteTask(action.task)
+            }
+
+            is TaskAction.SetFavourite -> {
+                setFavourite(action.task, action.isFavourite)
+            }
+
+            else -> {}
+        }
+    }
+
+    private fun setCompleted(task: ToDoTask, completed: Boolean) {
+        screenModelScope.launch(Dispatchers.IO) {
+            mongoDB.setCompleted(task, completed)
+        }
+    }
+
+    private fun setFavourite(task: ToDoTask, isFavourite: Boolean) {
+        screenModelScope.launch(Dispatchers.IO) {
+            mongoDB.setFavourite(task, isFavourite)
+        }
+    }
+
+    private fun deleteTask(task: ToDoTask) {
+        screenModelScope.launch(Dispatchers.IO) {
+            mongoDB.deleteTask(task)
         }
     }
 }
